adding new art to portfolio

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -22,44 +22,66 @@
         </header>
         <main>
           <article id="portfolio">
+            <h1>Illustrations</h1>
             <section id="illustrations" class="art">
               <section class="image">
-                <img src="../images/sunset.png" alt="Image of a pixel art sunset.">
-                <div class="desc">Image of a pixel art sunset.</div>
+                <img src="../images/sunset.png" alt="Digital pixel art of a sunset. (1)">
+                <div class="desc">Digital pixel art of a sunset. (1)</div>
               </section>
               <section class="image">
-                <img src="../images/sunset-2.png" alt="Image of a pixel art sunset.">
-                <div class="desc">Image of a pixel art sunset.</div>
+                <img src="../images/sunset-2.png" alt="Digital pixel art of a sunset. (2)">
+                <div class="desc">Digital pixel art of a sunset. (2)</div>
               </section>
               <section class="image">
-                <img src="../images/sunset-3.png" alt="Image of a pixel art sunset.">
-                <div class="desc">Image of a pixel art sunset.</div>
+                <img src="../images/sunset-3.png" alt="Digital pixel art of a sunset. (3)">
+                <div class="desc">Digital pixel art of a sunset. (3)</div>
               </section>
               <section class="image">
-                <img src="../images/pixel-rose.png" alt="Image of a pixel art rose.">
-                <div class="desc">Image of a pixel art rose.</div>
+                <img src="../images/pixel-rose.png" alt="Digital pixel art of a rose.">
+                <div class="desc">Digital pixel art of a rose.</div>
               </section>
               <section class="image">
-                <img src="../images/tree-tattoo.png" alt="Image of a simplistic digitally drawn tree.">
-                <div class="desc">Image of a simplistic digitally drawn tree, designed to be a tattoo.</div>
+                <img src="../images/tree-tattoo.png" alt="Digital art of a simplistic digitally drawn tree.">
+                <div class="desc">Digital art of a simplistic digitally drawn tree, designed to be a tattoo.</div>
               </section>
               <section class="image">
-                <img src="../images/soulless-pfp.png" alt="Image of character wearing a Halo helmet, petting a Huragok.">
-                <div class="desc">Image of character wearing a Halo helmet, petting a Huragok. Comissioned to be a twitch emote.</div>
+                <img src="../images/soulless-pfp.png" alt="Digital art of a character wearing a Halo helmet, petting a Huragok.">
+                <div class="desc">Digital art of a character wearing a Halo helmet, petting a Huragok. Comissioned to be a twitch emote.</div>
               </section>
               <section class="image">
                 <img src="../images/portrait.png" alt="Digitally drawn self portrait.">
                 <div class="desc">Digitally drawn self portrait.</div>
               </section>
               <section class="image">
-                <img src="../images/milk-banner.png" alt="Image of a generator inside of a cabin, from the game Dead By Daylight.">
-                <div class="desc">Image of a generator inside of a cabin, from the game Dead By Daylight. Comissioned to be a twitch banner.</div>
+                <img src="../images/milk-banner.png" alt="Digital art of a generator inside of a cabin, from the game Dead By Daylight.">
+                <div class="desc">Digital art of a generator inside of a cabin, from the game Dead By Daylight. Comissioned to be a twitch banner.</div>
+              </section>
+              <section class="image">
+                <img src="../images/tshirt-design.png" alt="Digital drawing of a plant growing from a recyling bin.">
+                <div class="desc">Digital drawing of a plant growing from a recycling bin. Created as a t-shirt design.</div>
+              </section>
+              <section class="image">
+                <img src="../images/hamilton-mosaic.PNG" alt="Digital drawing of a mosaic rendering of Alexander Hamilton.">
+                <div class="desc">Digital drawing of a mosaic rendering of Alexander Hamilton.</div>
+              </section>
+              <section class="image">
+                <img src="../images/pidgeon-holding-flower.jpg" alt="Acrylic painting of a pidgeon holding a flower.">
+                <div class="desc">Acrylic painting of a pidgeon holding a flower.</div>
+              </section>
+              <section class="image">
+                <img src="../images/pidgeon-on-flower.jpg" alt="Acrylic painting of a silly looking pidgeon on a flower.">
+                <div class="desc">Acrylic painting of a silly looking pidgeon on a flower.</div>
               </section>
             </section>
+            <h1>Animations</h1>
             <section id="animations" class="art">
               <section class="image">
-                <img src="../images/end-card.gif" alt="Gif of a person, with a ghost coming from their mouth.">
-                <div class="desc">Gif of a person, with a ghost coming from their mouth.</div>
+                <img src="../images/end-card.gif" alt="Digitally drawn GIF of a person, with a ghost coming from their mouth.">
+                <div class="desc">Digitally drawn GIF of a person, with a ghost coming from their mouth.</div>
+              </section>
+              <section class="image">
+                <img src="../images/btw-this-is-how-i-see-you.gif" alt="Video titled 'btw this is how i see you'. The video depicts several scenes, such as an ocean beach and a vase of flowers.">
+                <div class="desc">Video titled "btw this is how i see you". Created for my youtube channel.</div>
               </section>
             </section>
           </article>
