adding more animations to portfolio

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -80,9 +80,20 @@
                 <div class="desc">Digitally drawn GIF of a person, with a ghost coming from their mouth.</div>
               </section>
               <section class="image">
-                <img src="../images/btw-this-is-how-i-see-you.gif" alt="Video titled 'btw this is how i see you'. The video depicts several scenes, such as an ocean beach and a vase of flowers.">
+                <video width="700" height="394" controls>
+                  <source src="../images/btw-this-is-how-i-see-you.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                </video>
                 <div class="desc">Video titled "btw this is how i see you". Created for my youtube channel.</div>
               </section>
+              <section class="image">
+                <video width="700" height="394" controls>
+                  <source src="../images/dbd-rolling-girl.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                </video>
+                <div class="desc">"Rolling Girl" animation meme, featuring the survivors in the video game "Dead by Daylight". Created for my youtube channel.</div>
+              </section>
+              </video>
             </section>
           </article>
         </main>
